tests/baselines/reference/parserMemberAccessorDeclaration1.errors.txt
parserMemberAccessorDeclaration1.ts(2,7): error TS2378: A 'get' accessor must return a value.


==== parserMemberAccessorDeclaration1.ts (1 errors) ====
    class C {
      get a() { }
          ~
!!! error TS2378: A 'get' accessor must return a value.
    }